--- a/app/web/templates/header.html
+++ b/app/web/templates/header.html
@@ -7,8 +7,15 @@
       </a>
       <div class="navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-{% if 'user' in session %}
           <a class="nav-link" aria-current="page" href="/">Home</a>
+          <div class="nav-item dropdown">
+          <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Menu</a>
+            <div class="dropdown-menu dropdown-menu-end">
+                    <a class="dropdown-item" href="{{ url_for('web.history') }}">Incident History</a>
+                    <a class="dropdown-item" href="{{ url_for('web.sla') }}">Component Availability</a>
+            </div>
+          </div>
+{% if 'user' in session %}
           <a class="nav-link" href="{{ url_for('web.new_incident') }}">Open new incident</a>
           <a class="nav-link" href="{{ url_for('web.logout') }}">Log out</a>
 {% endif %}
