--- a/app/web/templates/header.html
+++ b/app/web/templates/header.html
@@ -2,7 +2,7 @@
 <header class="mb-4">
   <nav class="navbar navbar-expand-lg p-2 flex-wrap flex-md-nowrap bg-body-tertiary" aria-label="Main navigation">
     <div class="container-fluid pe-2">
-      <a class="navbar-brand brand-wide p-0 md-2" href="{{ base_url }}">
+      <a class="navbar-brand brand-wide p-0 md-2" href="/">
         <img src="{{ url_for('static', filename='images/logo.svg') }}" />
       </a>
       <div class="navbar-collapse justify-content-end" id="navbarNavAltMarkup">
