--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -6,7 +6,7 @@
       </div>
       <div class="col-lg-6 col-sm-6" aria-label="bottom">
         <ul>
-          <li><a href="https://cloud.telekom.de/en/contact/">Contact</a></li>
+          <li><a href="https://open-telekom-cloud.com/en/contact">Contact</a></li>
           <li><a href="https://www.t-systems.com/de/en/imprint">Legal Statement</a></li>
           <li><a href="https://www.t-systems.com/de/en/data-protection">Privacy Protection</a></li>
           <li><a href="https://www.t-systems.com/de/en/disclaimer-of-liability">Legal Agreement</a></li>
