--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -221,6 +221,12 @@ nav.navbar {
     margin-top: 4px;
 }
 
+.open-telekom-cloud {
+    text-align: center;
+    vertical-align: middle;
+    font-size: 30px;
+}
+
 .header-title {
     color: var(--dt-color-white);
     font-size: 1.5rem;
